--- a/canopy-dark.html
+++ b/canopy-dark.html
@@ -15,10 +15,11 @@
   <body class="case-study">
 
     <!-- Page container -->
-     <div class="container">
+
 
        <!-- Navigation -->
-       <header id="nav">
+       <header class="nav-down">
+        <div class="container">
          <a href="index-dark.html">
            <div class="logos">
              <img class ="logo-visible" src="images/logo-light.svg" alt="personal logo">
@@ -36,7 +37,10 @@
              <a href="canopy.html"><img src="images/sun.svg" alt="light mode"></a>
            </li>
          </ul>
+        <div class="container">
        </header>
+
+      <div class="container">
 
        <!-- Project fold -->
        <section class="canopy-hero">
@@ -582,6 +586,7 @@
           <p>Back to top</p></a>
      </div>-->
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+     <script src="javascript/index.js"></script>
      <script src="javascript/projects.js"></script>
 
          <!-- Global site tag (gtag.js) - Google Analytics -->
