--- a/canopy.html
+++ b/canopy.html
@@ -15,10 +15,11 @@
   <body class="case-study">
 
     <!-- Page container -->
-     <div class="container">
+
 
        <!-- Navigation -->
-       <header id="nav">
+       <header class="nav-down">
+         <div class="container">
          <a href="index.html">
            <div class="logos">
              <img class ="logo-visible" src="images/logo-dark.svg" alt="personal logo">
@@ -36,7 +37,10 @@
              <a href="canopy-dark.html"><img src="images/moon.svg" alt="dark mode"></a>
            </li>
          </ul>
+       </div>
        </header>
+
+       <div class="container">
 
        <!-- Project fold -->
        <section class="canopy-hero">
@@ -581,6 +585,7 @@
         </footer>
      </div>
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+     <script src="javascript/index.js"></script>
      <script src="javascript/projects.js"></script>
 
          <!-- Global site tag (gtag.js) - Google Analytics -->
