--- a/contact-dark.html
+++ b/contact-dark.html
@@ -15,10 +15,11 @@
   <body>
 
     <!-- Page container -->
-     <div class="container">
+
 
        <!-- Navigation -->
-       <header id="nav">
+       <header class="nav-down">
+         <div class="container">
          <a href="index-dark.html">
            <div class="logos">
              <img class="logo-visible" src="images/logo-light.svg" alt="personal logo">
@@ -36,7 +37,10 @@
              <a href="contact.html"><img src="images/sun.svg" alt="light mode"></a>
            </li>
          </ul>
+       </div>
        </header>
+
+       <div class="container">
 
        <h1 class="form-header">Say hello</h1>
 
