--- a/index-dark.html
+++ b/index-dark.html
@@ -15,11 +15,12 @@
   <body>
 
     <!-- Page container -->
-     <div class="container">
+
 
        <!-- Navigation -->
-       <header id="nav">
-         <a href="index.html">
+       <header class="nav-down">
+         <div class="container">
+         <a href="index-dark.html">
            <div class="logos">
              <img class ="logo-visible" src="images/logo-light.svg" alt="personal logo">
              <img class ="logo-hidden" src="images/logo-light-eyeopen.svg" alt="personal logo">
@@ -36,7 +37,10 @@
              <a href="index.html"><img src="images/sun.svg" alt="light mode"></a>
            </li>
          </ul>
+       </div>
        </header>
+
+       <div class="container">
 
        <!-- Hero statement -->
        <section class="hero">
