--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
   <body>
 
     <!-- Page container -->
-     <div class="container">
+
 
        <!-- Navigation -->
-       <header id="nav">
+       <header class="nav-down">
+         <div class="container">
          <a href="index.html">
            <div class="logos">
              <img class ="logo-visible" src="images/logo-dark.svg" alt="personal logo">
@@ -36,7 +37,10 @@
              <a href="index-dark.html"><img src="images/moon.svg" alt="dark mode"></a>
            </li>
          </ul>
+       </div>
        </header>
+
+       <div class="container">
 
        <!-- Hero statement -->
        <section class="hero">
