added email to contact page

--- a/contact-dark.html
+++ b/contact-dark.html
@@ -43,6 +43,7 @@
        <div class="container">
 
        <h1 class="form-header">Say hello</h1>
+       <h2 class="form-email">maxschnitzer95@gmail.com</h2>
 
        <form action="https://formspree.io/xpzygbar" method="POST">
         <label class="form-label">Your Name</label>
