--- a/about-dark.html
+++ b/about-dark.html
@@ -41,7 +41,7 @@
          <img class="about-image-mobile" src="images/about-pic-mobile.png" alt="pic of me">
          <div class="align-right">
            <img class="about-image-desktop" src="images/about-pic-desktop.png" alt="pic of me">
-           <h3> <span class="italic">Young Designer with Large Feet,</span> 2020 </h3>
+           <!--<h3> <span class="italic">Young Designer with Large Feet,</span> 2020 </h3>-->
          </div>
          <div class="about-text">
            <h1>I am a product designer</h1>
@@ -62,11 +62,11 @@
            </li>-->
            <li>
              <img src="images/arrow-light.svg" alt="arrow">
-             <a href="linkedin.com" target="_blank">LINKEDIN</a>
+             <a href="https://www.linkedin.com/in/max-schnitzer-793078b9/" target="_blank">LINKEDIN</a>
            </li>
            <li>
              <img class="padding-left" src="images/arrow-light.svg" alt="arrow">
-             <a href="#" target="_blank">RESUME</a>
+             <a href="images/MaxSchnitzer-Resume.pdf" target="_blank">RESUME</a>
            </li>
          </ul>
        </footer>
