--- a/contact.html
+++ b/contact.html
@@ -68,11 +68,11 @@
           </li>-->
           <li>
             <img src="images/arrow-dark.svg" alt="arrow">
-            <a href="linkedin.com" target="_blank">LINKEDIN</a>
+            <a href="https://www.linkedin.com/in/max-schnitzer-793078b9/" target="_blank">LINKEDIN</a>
           </li>
           <li>
             <img class="padding-left" src="images/arrow-dark.svg" alt="arrow">
-            <a href="#" target="_blank">RESUME</a>
+            <a href="images/MaxSchnitzer-Resume.pdf" target="_blank">RESUME</a>
           </li>
         </ul>
       </footer>
