--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
             <span class="hover-text">View case study</span>
           </div></a>
          </div>
-         <h2>Capstone Project</h2>
-         <h3>Book Recommendation App</h3>
+         <h2>Shlf</h2>
+         <h3>Social Reading App</h3>
          <div class="project-container capstone">
-           <a href="#"><img class="project-image" src="images/canopy-dashboard.png" alt="canopy dashboard">
+           <a href="shlf.html"><img class="project-image" src="images/shlf-home.png" alt="shlf mockups">
            <div class="middle">
              <span class="hover-text">View case study</span>
            </div></a>
@@ -85,11 +85,11 @@
            </li>-->
            <li>
              <img src="images/arrow-dark.svg" alt="arrow">
-             <a href="linkedin.com" target="_blank">LINKEDIN</a>
+             <a href="https://www.linkedin.com/in/max-schnitzer-793078b9/" target="_blank">LINKEDIN</a>
            </li>
            <li>
              <img class="padding-left" src="images/arrow-dark.svg" alt="arrow">
-             <a href="#" target="_blank">RESUME</a>
+             <a href="images/MaxSchnitzer-Resume.pdf" target="_blank">RESUME</a>
            </li>
          </ul>
        </footer>
