--- a/about-dark.html
+++ b/about-dark.html
@@ -51,7 +51,7 @@
 
             <p>In my free time, you can find me making art, living out my NBA dreams at the local rec center, honing my coding skills, and reassuring my dog that he’s a very good boy.</p>
 
-            <p class="free-time">Please <span><a href="contact-dark.html">reach out!</a></span> I’d love to connect.</p>
+            <p class="free-time">I am currently looking to join a detail-orientated design team that cares deeply about collaboration. Please <span><a href="contact.html">reach out!</a></span> I’d love to connect.</p>
           </div>
        </section>
        <footer>
