--- a/canopy-dark.html
+++ b/canopy-dark.html
@@ -559,9 +559,11 @@
         <section class="other-work">
           <article class="subsection centered">
             <h1>OTHER WORK</h1>
-            <a href="#"><h6>Capstone Project</h6></a>
+            <a href="shlf-dark.html"><h6>Capstone Project</h6></a>
           </article>
         </section>
+
+        <p class="join-team">I am currently looking to join a detail-orientated design team that cares deeply about collaboration. Please <span><a href="contact.html">reach out!</a></span> I’d love to connect.</p>
 
         <!-- Footer -->
 
