--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
          </div>
        </section>
 
+       <p class="join-team">I am currently looking to join a detail-orientated design team that cares deeply about collaboration. Please <span><a href="contact.html">reach out!</a></span> I’d love to connect.</p>
+
        <!-- Footer -->
        <footer>
          <ul class="contacts">
