updated linkedin and resume

--- a/about-dark.html
+++ b/about-dark.html
@@ -62,7 +62,7 @@
            </li>-->
            <li>
              <img src="images/arrow-light.svg" alt="arrow">
-             <a href="https://www.linkedin.com/in/max-schnitzer-793078b9/" target="_blank">LINKEDIN</a>
+             <a href="https://www.linkedin.com/in/max-schnitzer/" target="_blank">LINKEDIN</a>
            </li>
            <li>
              <img class="padding-left" src="images/arrow-light.svg" alt="arrow">
