--- a/about-dark.html
+++ b/about-dark.html
@@ -47,7 +47,7 @@
            <h1>I am a product designer</h1>
            <h2>who loves making digital experiences that elicit audible holy molies.</h2>
 
-           <p>I grew up in Dallas, studied psychology and architecture at Tulane University, backpacked across Asia and Europe, and found my way back to Dallas. Eager to continue my design education, I completed a product design apprenticeship with Bloc. This experience allowed me to leverage my foundations in psychology and architecture and grow as a user-centered designer operating in the digital realm. My design approach centers around merging data-validated user experiences with clean interfaces. I believe that thoughtful design holds tremendous power to explore, visualize and solve complex human issues.</p>
+           <p>I grew up in Dallas, studied psychology and architecture at Tulane University, backpacked across Asia and Europe, and found my way back to Dallas. Eager to continue my design education, I completed a product design training program with Thinkful. This experience allowed me to leverage my foundations in psychology and architecture and grow as a user-centered designer operating in the digital realm. My design approach centers around merging data-validated user experiences with clean interfaces. I believe that thoughtful design holds tremendous power to explore, visualize and solve complex human issues.</p>
 
             <p>In my free time, you can find me making art, living out my NBA dreams at the local rec center, honing my coding skills, and reassuring my dog that he’s a very good boy.</p>
 
