--- a/shlf-dark.html
+++ b/shlf-dark.html
@@ -37,11 +37,16 @@
              <a href="shlf.html"><img src="images/sun.svg" alt="light mode"></a>
            </li>
          </ul>
-        <div class="container">
+         </div>
+
        </header>
+       <div class="container">
 
        <section class="canopy-hero construction">
          <h1>Under construction - case study coming very soon!</h1>
+         <h2>In the meantime, you can view the final prototype <span><a href="https://www.figma.com/proto/N6hyIeQuWr2E8hzsqKqCyZ/Shlf-Prototype?node-id=1%3A10&viewport=-912%2C-1108%2C0.3970489799976349&scaling=scale-down">here</a></span>.</h2>
        </section>
+
+       </div>
 
   </html>
