corrected dark mode links

--- a/canopy-dark.html
+++ b/canopy-dark.html
@@ -563,7 +563,7 @@
           </article>
         </section>
 
-        <p class="join-team">I am currently looking to join a detail-oriented design team that cares deeply about collaboration. Please <span><a href="contact.html">reach out!</a></span> I’d love to connect.</p>
+        <p class="join-team">I am currently looking to join a detail-oriented design team that cares deeply about collaboration. Please <span><a href="contact-dark.html">reach out!</a></span> I’d love to connect.</p>
 
         <!-- Footer -->
 
