creating to making

--- a/about-dark.html
+++ b/about-dark.html
@@ -49,7 +49,7 @@
 
            <p>I grew up in Dallas, studied psychology and architecture at Tulane University, backpacked across Asia and Europe, and found my way back to Dallas. Eager to continue my design education, I completed a product design training program with Thinkful. This experience allowed me to leverage my foundations in psychology and architecture and grow as a user-centered designer operating in the digital realm. My design approach centers around merging data-validated user experiences with clean interfaces. I believe that thoughtful design holds tremendous power to explore, visualize and solve complex human issues.</p>
 
-            <p>In my free time, you can find me creating art, living out my NBA dreams at the local rec center, honing my coding skills, and reassuring my dog that he’s a very good boy.</p>
+            <p>In my free time, you can find me making art, living out my NBA dreams at the local rec center, honing my coding skills, and reassuring my dog that he’s a very good boy.</p>
 
             <p class="free-time">I am currently looking to join a detail-oriented design team that cares deeply about collaboration. Please <span><a href="contact-dark.html">reach out!</a></span> I’d love to connect.</p>
           </div>
